20010518:
- Bugfix: multi volume output now should work
	  (bugreport by Dan Hollis)
- docu update
- added some extra checks after running lint...

20010515:
- Docu update concerning usage of multi volume support
- multi volume options consistency checking added

20010509:
- summary is now also displayed upon break and terminate
- Bugfix: summary overflow
- experimental feature: input of multiple volumes

20010507:
- status messages are now printed to the terminal not to stderr
- Bugfix: for output blocksize code
- documentation update
- new: summary information
- experimental feature: output to multiple volumes

20010426:
- Bugfix: fixed sleep, which limited the performace to 1MB/s
          (credits go to Padraig Brady <padraig@antefacto.com>)
- Bugfix: fixed incorrect display of total datatransfer for >2GB
- Cosmetic: on sighup print newline on stderr
- added manpage

20010208:
- Bugfix: option -p did not work
- reworked option flags (-h is now -t, -t is now -T)
- output is now done with the blocksize of the output stream
  otherwise direct writing to a tape device failed under Linux

20010124:
- Bugfix: outputThread terminated too early in certain cases
- Fix for correct termination if an error occured
- added install rule in Makefile
- status messages are now indebendend of other messages
- a little bit more verbose debugging info